Go around files explore files

--- a/Shell_code_ROS/src/lab2/package.xml
+++ b/Shell_code_ROS/src/lab2/package.xml
@@ -57,6 +57,8 @@
   <depend>sensor_msgs</depend>
   <depend>geometry_msgs</depend>
   <depend>tf</depend>
+  <depend>actionlib</depend>
+  <depend>message_filters</depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
